--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">BudgeTech</string>
+    <string name="sign_up"><u>Sign Up</u></string>
+    <string name="facebook_app_id">942523172848559</string>
+    <string name="fb_login_protocol_scheme">fb942523172848559</string>
 </resources>
