--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
     <string name="sign_up"><u>Sign Up</u></string>
     <string name="facebook_app_id">942523172848559</string>
     <string name="fb_login_protocol_scheme">fb942523172848559</string>
+    <string name="title_activity_bottom_nav_bar">MainActivity</string>
+    <string name="title_home">Home</string>
+    <string name="title_dashboard">Dashboard</string>
+    <string name="title_notifications">Notifications</string>
 </resources>
